# lxp-scan

./: Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md
docs/specs/: 2026-07-14-tui-highlight-design.md
docs/superpowers/plans/: 2026-07-13-lxp-scan.md
docs/superpowers/specs/: 2026-07-13-lxp-scan-design.md
plugin/.claude-plugin/: plugin.json
plugin/skills/lxp-scan/: SKILL.md
src/: analyzer.rs  cli.rs  clones.rs  commands.rs  context.rs  definition.rs  discover.rs  drift.rs  dupes.rs  fingerprint.rs  impact.rs  lib.rs  main.rs  mcp.rs  report.rs  resolver.rs
src/features/: clones.rs  context.rs  drift.rs  dupes.rs  impact.rs  mod.rs
src/output/: highlight.rs  mod.rs  report.rs
src/scan/: definition.rs  fingerprint.rs  mod.rs  walker.rs
src/tui/: app.rs  fuzzy.rs  mod.rs  ui.rs
tests/: context_it.rs  impact_it.rs
tests/fixtures/workspace/.hidden-repo/: package.json
tests/fixtures/workspace/app-one/: package.json  tsconfig.json
tests/fixtures/workspace/app-one/src/: globals.d.ts  page.tsx  readme.md  section.tsx
tests/fixtures/workspace/app-one/src/utils/: helpers.ts  numbers.ts  strings.ts  (+1 more)
tests/fixtures/workspace/app-two/: package.json
tests/fixtures/workspace/app-two/src/: broken.ts  other.tsx  special.tsx  whole.ts
tests/fixtures/workspace/broken-repo/: package.json
tests/fixtures/workspace/fake-lib/: package.json
tests/fixtures/workspace/fake-lib/utils/: phone.ts
tests/fixtures/workspace/lxp-common-widgets-js/: package.json
tests/fixtures/workspace/lxp-common-widgets-js/src/: number.ts
(+4 files in other folders)
