[package]
name = "lxp-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
ignore = "0.4.28"
jsonc-parser = { version = "0.33.0", features = ["serde"] }
oxc_allocator = "0.139.0"
oxc_ast = "0.139.0"
oxc_ast_visit = "0.139"
oxc_parser = "0.139.0"
oxc_span = "0.139.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
